examples/manual/failing/ExportExplicit.purs
-- should fail as z does not exist in the module
module M1 (x, y, z) where

  x = 1
  y = 2
